# student-management-system-qt

./: README.md
include/: Course.h  CoursesManagerWidget.h  DashboardWidget.h  DetailStudentInformation.h  LoginWindow.h  ScheduleDialog.h  Score.h  ScoreManagerWidget.h  Student.h  StudentListDialog.h  StudentManagerWidget.h  User.h  mainwindow.h
prj/: CMakeLists.txt  DemoUI_quiz.pro  mainwindow.ui
screen/: CoursesManagerWidget.cpp  DashboardWidget.cpp  DetailStudentInformation.cpp  LoginWindow.cpp  ScheduleDialog.cpp  ScoreManagerWidget.cpp  StudentListDialog.cpp  StudentManagerWidget.cpp  StudentManagerWidget_slot.cpp  main.cpp  main_slots.cpp  mainwindow.cpp
test/: data.json
